[project]
name = "agnos"
version = "0.1.0"
authors = [{name = "Vehicle Researcher", email = "user@comma.ai"}]
requires-python = "~=3.11"
description = ""
dependencies = [
  "aiohttp",
  "aiortc",
  "atomicwrites",
  "casadi",
  "cffi",
  "crcmod",
  "cryptography",
  "cython",
  "dbus-python",
  "evdev",
  "flake8",
  "flask",
  "future-fstrings",  # needed for acados
  "gunicorn",
  "hatanaka == 2.4",
  "hexdump",
  "hypothesis",
  "jinja2",
  "json-rpc",
  "libusb1",
  "markdown-it-py",
  "nose",
  "numpy < 2.0.0",  # pending bumping in openpilot
  "onnx",
  "onnxruntime >= 1.16.3",
  "pillow",
  "protobuf",
  "psutil",
  "pyaudio",
  "pycapnp",
  "pyclean",
  "pycryptodome",
  "pydub",
  "pyjwt",
  "pylint",
  "pyopencl == 2024.1",  # pinned until cmake update coming with 24.04
  "pyserial",
  "pytest",
  "pytest-cov",
  "pytest-cpp",
  "pytest-forked",
  "pytest-mock",
  "pytest-random-order",
  "pytest-randomly",
  "pytest-repeat",
  "pytest-subtests",
  "pytest-timeout",
  "pytest-xdist",
  "python-dateutil",
  "pyyaml",
  "pyzmq",
  "pyzstd",
  "requests",
  "scons",
  "sconscontrib",
  "sentry-sdk",
  "setproctitle",
  "six",
  "smbus2",
  "sounddevice",
  "spidev",
  "spidev2",
  "sympy != 1.6.1",
  "timezonefinder",
  "torch",
  "tqdm",
  "urllib3",
  "utm",
  "websocket-client",
  "zstandard",
  "zstd"
]

[project.optional-dependencies]
dev = [
  "ipython",
  "azure-identity",
  "azure-storage-blob",
  "pycurl",
  "git-pylint-commit-hook",
  "tenacity",
  "mock",
  "dictdiffer",
  "aenum",
  "coverage",
  "paramiko",
  "lru-dict",
  "pprofile",
  "pyprof2calltree",
  "pre-commit",
  "mypy",
  "parameterized",
  "inputs",
  "future-fstrings",
  "tabulate",
  "flaky"
]

[tool.uv.sources]
sconscontrib = { git = "https://github.com/SCons/scons-contrib.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "." ]
