[project]
name = "agnos"
version = "0.1.0"
authors = [{name = "Vehicle Researcher", email = "user@comma.ai"}]
requires-python = "~=3.11"
description = ""
dependencies = [
  # required
  "dbus-python",
  # tinygrad
  "pyopencl == 2024.1",  # pinned until cmake update coming with 24.04
]

[project.optional-dependencies]
dev = [
  "ipython",
  "azure-identity",
  "azure-storage-blob",
  "pycurl",
  "git-pylint-commit-hook",
  "tenacity",
  "mock",
  "dictdiffer",
  "aenum",
  "coverage",
  "paramiko",
  "lru-dict",
  "pprofile",
  "pyprof2calltree",
  "pre-commit",
  "mypy",
  "parameterized",
  "inputs",
  "future-fstrings",
  "tabulate",
  "flaky"
]

[tool.uv.sources]
sconscontrib = { git = "https://github.com/SCons/scons-contrib.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "." ]
