[project]
name = "agnos"
version = "0.1.0"
authors = [{name = "Vehicle Researcher", email = "user@comma.ai"}]
requires-python = "~=3.11"
description = ""
dependencies = [
  "openpilot",
  "openpilot[dev]",
  "openpilot[testing]",

  # hardware.py
  "dbus-python",
  # amplifier.py
  "smbus2",

  # pandad
  "libusb1 == 3.1.0", # recent versions segfault on comma three

  # tinygrad
  "pyopencl @ https://github.com/adeebshihadeh/pyopencl/releases/download/v2025.2.7-arm64/pyopencl-2025.2.7-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl",

  # provisioning
  "pyusb",
  "paramiko",

  # extra nice-to-haves
  "evdev",
  "ipython",
  "py-spy",
  "spidev2",
  "flaky",

  # GUIs
  "raylib @ https://github.com/commaai/raylib-python-cffi/releases/download/8/raylib-5.5.0.2-cp312-cp312-linux_aarch64.whl",
]

[tool.uv]
environments = ["python_version >= '3.12' and python_version < '3.13' and sys_platform == 'linux'"]

[tool.uv.sources]
openpilot = { path = "openpilot" }
