[project]
name = "agnos"
version = "0.1.0"
authors = [{name = "Vehicle Researcher", email = "user@comma.ai"}]
requires-python = ">=3.12.3, <3.13"
description = ""
dependencies = [
  "openpilot",
  "openpilot[testing]",

  # hardware.py
  "dbus-python",
  # amplifier.py
  "smbus2",

  # provisioning
  "pyusb",
  "paramiko",

  # extra nice-to-haves
  "evdev",
  "ipython",
  "py-spy",
  "spidev2",
  "flaky",

  # GUIs
  "raylib @ git+https://github.com/commaai/dependencies.git@releases#subdirectory=raylib",
]

[tool.uv.sources]
openpilot = { path = "openpilot" }
